--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   connectivity_plus: ^4.0.1
   get_it: ^8.0.2
   equatable: ^2.0.7
+  flutter_markdown: ^0.7.4+3
+  path_provider: ^2.1.5
+  markdown_toolbar:
+    path: 3rdParty/markdown_toolbar
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
